// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse templates 1`] = `
Array [
  Object {
    "cheerio": [Function],
    "templateFile": "imports/client/lib/additionalTemplates.html",
    "templateName": "additionalOne1",
  },
  Object {
    "cheerio": [Function],
    "templateFile": "imports/client/lib/additionalTemplates.html",
    "templateName": "templateFromExternalFile",
  },
  Object {
    "cheerio": [Function],
    "templateFile": "imports/client/lib/additionalTemplates.html",
    "templateName": "additionalOne3",
  },
  Object {
    "cheerio": [Function],
    "templateFile": "imports/client/lib/eachInsideEachInsideEach.html",
    "templateName": "eachInsideEachInsideEach",
  },
  Object {
    "cheerio": [Function],
    "templateFile": "imports/client/lib/main.html",
    "templateName": "testTemplate",
  },
  Object {
    "cheerio": [Function],
    "templateFile": "imports/client/lib/main.html",
    "templateName": "nestedTemplate",
  },
  Object {
    "cheerio": [Function],
    "templateFile": "imports/client/lib/main.html",
    "templateName": "colorRow",
  },
  Object {
    "cheerio": [Function],
    "templateFile": "imports/client/lib/nestedTemplateWithParameters.html",
    "templateName": "parentTemplate",
  },
  Object {
    "cheerio": [Function],
    "templateFile": "imports/client/lib/nestedTemplateWithParameters.html",
    "templateName": "nestedWithParams",
  },
  Object {
    "cheerio": [Function],
    "templateFile": "imports/client/lib/nestedWithInstance.html",
    "templateName": "parentWithInstance",
  },
  Object {
    "cheerio": [Function],
    "templateFile": "imports/client/lib/nestedWithInstance.html",
    "templateName": "nestedWithInstance",
  },
  Object {
    "cheerio": [Function],
    "templateFile": "imports/client/lib/onCreatedTemplate.html",
    "templateName": "onCreatedTemplate",
  },
  Object {
    "cheerio": [Function],
    "templateFile": "imports/client/lib/registeredHelper.html",
    "templateName": "forRegisteredHelper",
  },
  Object {
    "cheerio": [Function],
    "templateFile": "imports/client/lib/templateWithContentBlock.html",
    "templateName": "templateWithContentBlockOut",
  },
  Object {
    "cheerio": [Function],
    "templateFile": "imports/client/lib/templateWithContentBlock.html",
    "templateName": "templateWithContentBlockInside",
  },
  Object {
    "cheerio": [Function],
    "templateFile": "imports/client/lib/withWith.html",
    "templateName": "withWith",
  },
]
`;

exports[`renders nested template with params and this.data in onCreated 1`] = `
"
    <div>Parent: 
    <div>Child: is it? not hello Param Again - is it?</div>
</div>
"
`;

exports[`renders properly each inside each inside each 1`] = `
"
    <div>
        
        first abc
        
        second ghi
        
        third mno
        
        fourth stv
        
        fourth xyz
        
        
        third pqr
        
        fourth stv
        
        fourth xyz
        
        
        
        second jkl
        
        third mno
        
        fourth stv
        
        fourth xyz
        
        
        third pqr
        
        fourth stv
        
        fourth xyz
        
        
        
        
        first def
        
        second ghi
        
        third mno
        
        fourth stv
        
        fourth xyz
        
        
        third pqr
        
        fourth stv
        
        fourth xyz
        
        
        
        second jkl
        
        third mno
        
        fourth stv
        
        fourth xyz
        
        
        third pqr
        
        fourth stv
        
        fourth xyz
        
        
        
        
    </div>
"
`;

exports[`renders template with onCreated callback and using Template.instance() 1`] = `
"
    <div>value of reactive variable</div>
"
`;

exports[`renders template with onCreated callback and using Template.instance() with two templates, one nested 1`] = `
"
    <div>parent - value of reactive variable
        
    <div>nested - value of reactive variable</div>

    parent - value of reactive variable</div>
"
`;

exports[`renders template with with 1`] = `
"
    <div>
        outside with
        
            really beautiful
        
        outside again
    </div>
"
`;

exports[`renders templateWithContentBlock 1`] = `
"
    <div>External
    
    <div>div from nested template
    
        <div>div from the parent template inside the nested abc</div>
    
    abc</div>

    </div>
"
`;

exports[`renders templates in file without data implicitly passed to it 1`] = `
"
    <div>
        <div>is it me you looking for? from a function</div>
        
    <div>this is from nested template</div>

        <ul>
            
            
    <li style=\\"color:yellow\\">yellow</li>

            
            
    <li style=\\"color:blue\\">blue</li>

            
            
    <li style=\\"color:red\\">red</li>

            
        </ul>

        
            <p>This is true (if true)</p>
            
            
            <p>Should show up - (unless false)</p>
            
            
            <p>but this should show up (else)</p>
            
    </div>
"
`;

exports[`renders templates included cross-files 1`] = `
"
    From one 2
    
    <div>this is from nested template</div>

"
`;

exports[`should have access to functions added by registerHelper 1`] = `
"
    
    <div>
        <p>Register helper working properly!!!</p>
    </div>
    
"
`;

exports[`template  renders properly 1`] = `
"<div>
    <div>is it me you looking for? from a function</div>

    <div>this is from nested template</div>

    <ul>


        <li style=\\"color:yellow\\">yellow</li>



        <li style=\\"color:blue\\">blue</li>



        <li style=\\"color:red\\">red</li>


    </ul>



    <p>Should show up - (unless false)</p>


    <p>but this should show up (else)</p>

</div>"
`;
